--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 
     <body>
         <main>
-            <h1>Discover hidden places in the world around you</h1>
-            <h4>Download Excursion (Coming soon!)</h4>
+            <h1 class="headline">Discover hidden places in the world around you</h1>
+            <h4><a>Download Excursion (Coming soon!)</a></h4>
+            <video autoplay>
+                <source src="./resources/videos/excursion.mp4">
+            </video>
+            <h2 class="sub-title">Your personal travel guide</h2>
+            <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+            <p>
+                <img src="./resources/images/camp.jpg" alt="Camping site atop a mountain">
+            </p>
+            <p>
+                <img src="./resources/images/phone.png" alt="Smartphone icon">
+            </p>
+            <h2 class="sub-title">Comming soon por iPhone and Android</h2>
+            <h4><a>Download Excursion (Coming soon!)</a></h4>
+            <h3>&copy; Excursion</h3>
         </main>
     </body>
 </html>
