--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main>
             <h1 class="headline">Discover hidden places in the world around you</h1>
             <h4><a>Download Excursion (Coming soon!)</a></h4>
-            <video width="404" height="720" autoplay muted>
+            <video width="404" height="720" autoplay muted loop>
                 <source src="./resources/videos/excursion.mp4">
             </video>
             <h2 class="sub-title">Your personal travel guide</h2>
@@ -25,5 +25,5 @@
             <h4><a>Download Excursion (Coming soon!)</a></h4>
             <h3 class="copysign">&copy; Excursion   </h3>
         </main>
-    </body>
+    </body>echo ""
 </html>
