Fix typos in HTML

--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
             <h4><a>Download Excursion (Coming soon!)</a></h4>
             <h3 class="copysign">&copy; Excursion   </h3>
         </main>
-    </body>echo ""
+    </body>
 </html>
